[package]
name = "joxide"
version = "0.0.1"
license = "MIT"
description = "CLI tool to validate and format json files"
homepage = "https://github.com/RainingComputers/joxide"
repository = "https://github.com/RainingComputers/joxide"
documentation = "https://github.com/RainingComputers/joxide"
readme = "README.md"
authors = ["RainingComputers <vishnu.vish.shankar@gmail.com>"]
keywords = ["cli", "json", "terminal", "tool"]
categories = ["command-line-utilities"]
exclude = [
    ".vscode/*",
]

[dependencies]
argh = "0.1.9"
